# assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  index.html  main.py  pyproject.toml
assistant_app/: __init__.py  agent.py  chat_history_rag_async.py  chat_history_rag_search.py  cli.py  config.py  db.py  feishu_adapter.py  feishu_calendar_client.py  feishu_calendar_sync_service.py  llm.py  logging_setup.py  persona.py  planner_common.py  planner_plan_replan.py  planner_thought.py  proactive_context.py  proactive_react.py  proactive_reminder_service.py  proactive_tools.py  reminder_service.py  reminder_sink.py  runtime_actions.py  scheduled_planner_task_service.py  scheduled_result_decision.py  scheduled_task_cron.py  search.py  timer.py  user_profile_refresh.py
doc/: 2026021422:main:work-summary.md  2026021515:loop_agent:plan-replan.md  2026030913:refactor:pydantic-freeze-plan.md  2026030915:refactor:pydantic-followup-freeze.md  2026031216:main:code-quality-review-executable.md  README.md  session-quickstart.md  timer-design.md
scripts/: assistant.sh  bootstrap.sh  fix_dirty_datetime_data.sh  fix_thought_status_data.sh
sql/: init_assistant_db.sql
tests/: test_agent.py  test_agent_component_models.py  test_assistant_script.py  test_bootstrap_script.py  test_chat_history_rag_async.py  test_chat_history_rag_search.py  test_cli.py  test_config.py  test_db.py  test_docs_consistency.py  test_feishu_adapter.py  test_feishu_calendar_client.py  test_feishu_calendar_sync_service.py  test_fix_dirty_datetime_data.py  test_llm.py  (+30 more)
(+68 files in other folders)
