[project]
name = "cli-ai-assistant"
version = "0.1.0"
description = "CLI personal assistant powered by an OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.50.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
assistant = "assistant_app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["assistant_app"]
