[project]
name = "cli-ai-assistant"
version = "0.1.0"
description = "CLI personal assistant powered by an OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.50.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "pre-commit>=4.0.0"
]

[project.scripts]
assistant = "assistant_app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["assistant_app"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["assistant_app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
files = ["assistant_app", "main.py"]
